--- a/index.html
+++ b/index.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>nWn</title>
+    <title>nWn Home</title>
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/styles.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="logo">n<span>W</span>n</header>
-        <div>
-            <nav>
-                <ul>
-                    <li><a href="#">Arch Portfolio</a></li>
-                    <li><a href="#">Websites</a></li>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-
+    <header class="logo"><img src="img/logo.png"></header>
+    <nav class="navigation-bar">
+        <ul class="navigation-list">
+            <li><a href="archportfolio.html">Arch Portfolio</a></li>
+            <li><a href="websites.html">Webs</a></li>
+            <li><a href="#">Home</a></li>
+            <li><a href="about.html">About me</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+        
 </body>
 </html>
