--- a/archportfolio.html
+++ b/archportfolio.html
@@ -7,84 +7,86 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/styles.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="logo"><img src="img/logo.png"></header>
-    <nav class="navigation-bar">
-        <ul class="navigation-list">
-            <li><a href="#">Arch Portfolio</a></li>
-            <li><a href="websites.html">Webs</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.hmtl">About me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
-    <main>
-            <ul class="thumbnail-list">
-                <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/dynamo_0.png" alt="Dynamo Scripts">
-                    </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/santa_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/ice_city_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/la_hotel_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/inspiration_hotel_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/degree_project_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/hospital_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/church_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/library_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/youth_camp_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/art_gallery_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-                <li class="thumbnail-item">
-                        <a href="#">
-                            <img class="thumbnail-image" src="img/music_school_0.png" alt="Dynamo Scripts">
-                        </a>
-                </li>
-    
+    <header class="main-header"><img src="img/logo.png">
+        <nav class="navigation-bar">
+            <ul class="navigation-list">
+                <li><a href="#">Arch Portfolio</a></li>
+                <li><a href="websites.html">Webs</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.hmtl">About me</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
-        </main>
+        </nav>
+    </header>
+    <main class="main-content">
+        <ul class="thumbnail-list">
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/dynamo_0.png" alt="Dynamo Scripts">
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/santa_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/ice_city_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/la_hotel_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/inspiration_hotel_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/degree_project_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/hospital_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/church_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/library_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/youth_camp_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/art_gallery_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/music_school_0.png" alt="Dynamo Scripts">
+                    </a>
+            </li>
+
+        </ul>
+    </main>
 </body>
 </html>
