--- a/about.html
+++ b/about.html
@@ -7,20 +7,22 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/styles.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="logo"><img src="img/logo.png"></header>
-    <nav class="navigation-bar">
-        <ul class="navigation-list">
-            <li><a href="archportfolio.html">Arch Portfolio</a></li>
-            <li><a href="websites.hmtl">Webs</a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="#">About me</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header class="main-header"><img src="img/logo.png">
+        <nav class="navigation-bar">
+            <ul class="navigation-list">
+                <li><a href="archportfolio.html">Arch Portfolio</a></li>
+                <li><a href="websites.hmtl">Webs</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">About me</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
 
 </body>
 </html>
