Add sgv version of the images

--- a/index.html
+++ b/index.html
@@ -3,29 +3,90 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>nWn Home</title>
+    <title>nWn Arch Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/styles.css" />
+    <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
     <script src="main.js"></script>
 </head>
 <body>
-    <header class="main-header"><img src="img/logo.png">
+    <header class="main-header"><img src="img/logo.svg">
         <nav class="navigation-bar">
             <ul class="navigation-list">
-                <li><a href="archportfolio.html">Arch Portfolio</a></li>
+                <li><a href="#">Arch Portfolio</a></li>
                 <li><a href="websites.html">Webs</a></li>
-                <li><a href="#">Home</a></li>
-                <li><a href="about.html">About me</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.hmtl">About me</a></li>
                 <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-    <main>
-        
+    <main class="main-content">
+        <ul class="thumbnail-list">
+            <li class="thumbnail-item">
+                <a href="#">
+                    <img class="thumbnail-image" src="img/dynamo_0.svg" alt="Dynamo Scripts">
+                </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/santa_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/ice_city_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/la_hotel_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/hospital_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/church_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/library_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/youth_camp_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/art_gallery_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+            <li class="thumbnail-item">
+                    <a href="#">
+                        <img class="thumbnail-image" src="img/music_school_0.svg" alt="Dynamo Scripts">
+                    </a>
+            </li>
+
+        </ul>
     </main>
-        
 </body>
 </html>
