--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
-    <script src="main.js"></script>
 </head>
 <body>
     <header class="main-header"><img src="img/logo.svg">
@@ -26,9 +26,12 @@
     <main class="main-content">
         <ul class="thumbnail-list">
             <li class="thumbnail-item">
-                <a href="#">
+                <a href="img/dynamo_1.png" data-lightbox="roadtrip" data-title="Revision history sheet">
                     <img class="thumbnail-image" src="img/dynamo_0.svg" alt="Dynamo Scripts">
                 </a>
+                <a href="img/dynamo_2.png" data-lightbox="roadtrip" data-title="Matrix on curves"></a>
+                <a href="img/dynamo_3.png" data-lightbox="roadtrip" data-title="Place views on sheets"></a>
+                <a href="img/dynamo_4.png" data-lightbox="roadtrip" data-title="Rename grids"></a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
@@ -88,5 +91,6 @@
 
         </ul>
     </main>
+    <script src="js/lightbox.js"></script>
 </body>
 </html>
