Add images for lightbox

--- a/index.html
+++ b/index.html
@@ -26,41 +26,49 @@
     <main class="main-content">
         <ul class="thumbnail-list">
             <li class="thumbnail-item">
-                <a href="img/dynamo_1.png" data-lightbox="roadtrip" data-title="Revision history sheet">
+                <a href="img/dynamo_1.png" data-lightbox="dynamo" data-title="Revision history sheet" data-alt="Revision history sheet script">
                     <img class="thumbnail-image" src="img/dynamo_0.svg" alt="Dynamo Scripts">
                 </a>
-                <a href="img/dynamo_2.png" data-lightbox="roadtrip" data-title="Matrix on curves"></a>
-                <a href="img/dynamo_3.png" data-lightbox="roadtrip" data-title="Place views on sheets"></a>
-                <a href="img/dynamo_4.png" data-lightbox="roadtrip" data-title="Rename grids"></a>
+                <a href="img/dynamo_2.png" data-lightbox="dynamo" data-title="Matrix on curves" data-alt="Matrix on curves script"></a>
+                <a href="img/dynamo_3.png" data-lightbox="dynamo" data-title="Place views on sheets" data-alt="Place views on sheets script"></a>
+                <a href="img/dynamo_4.png" data-lightbox="dynamo" data-title="Rename grids" data-alt="rename grids script"></a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="img/santa_1.jpg" data-lightbox="santa" data-title="Location" data-alt="Location">
+                    <img class="thumbnail-image" src="img/santa_0.svg" alt="Santa logo">
+                </a>
+                <a href="img/santa_2.jpg" data-lightbox="santa" data-title="Aerial view" data-alt="Aerial view"></a>
+                <a href="img/santa_3.jpg" data-lightbox="santa" data-title="South facade view" data-alt="South facade view"></a>
+                <a href="img/santa_4.jpg" data-lightbox="santa" data-title="Axonometry" data-alt="Axonometry"></a>
+                <a href="img/santa_5.jpg" data-lightbox="santa" data-title="Axonometric section" data-alt="Axonometric section"></a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="img/ice_city_1.jpg" data-lightbox="ice-city" data-title="Location" data-alt="Location">
+                    <img class="thumbnail-image" src="img/ice_city_0.svg" alt="Ice city logo">
+                </a>
+                <a href="img/ice_city_2.jpg" data-lightbox="ice-city" data-title="Axonometry" data-alt="Axonometry"></a>
+            </li>
+            <li class="thumbnail-item">
+                <a href="img/la_hotel_1.jpg" data-lightbox="la-hotel" data-title="Night aerial view, image courtesy of asap llpc" data-alt="Night aerial view">
+                    <img class="thumbnail-image" src="img/la_hotel_0.svg" alt="LA hotel logo">
+                </a>
+                <a href="img/la_hotel_2.jpg" data-lightbox="la-hotel" data-title="Day street view, image courtesy of asap llpc" data-alt="Day street view"></a>
+                <a href="img/la_hotel_3.jpg" data-lightbox="la-hotel" data-title="Night street view, image courtesy of asap llpc" data-alt="Night street view"></a>
+                <a href="img/la_hotel_4.jpg" data-lightbox="la-hotel" data-title="Day street view, image courtesy of asap llpc" data-alt="Day street view"></a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
-                        <img class="thumbnail-image" src="img/santa_0.svg" alt="Dynamo Scripts">
+                        <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Inspiration hotel">
                     </a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
-                        <img class="thumbnail-image" src="img/ice_city_0.svg" alt="Dynamo Scripts">
+                        <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Final degree project logo">
                     </a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
-                        <img class="thumbnail-image" src="img/la_hotel_0.svg" alt="Dynamo Scripts">
-                    </a>
-            </li>
-            <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Dynamo Scripts">
-                    </a>
-            </li>
-            <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Dynamo Scripts">
-                    </a>
-            </li>
-            <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/hospital_0.svg" alt="Dynamo Scripts">
+                        <img class="thumbnail-image" src="img/hospital_0.svg" alt="Zhengzhou hospital logo">
                     </a>
             </li>
             <li class="thumbnail-item">
