Add new images to lightbox

--- a/index.html
+++ b/index.html
@@ -57,9 +57,14 @@
                 <a href="img/la_hotel_4.jpg" data-lightbox="la-hotel" data-title="Day street view, image courtesy of asap llpc" data-alt="Day street view"></a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Inspiration hotel">
-                    </a>
+                <a href="img/inspiration_hotel_1.jpg" data-lightbox="inspiration-hotel" data-title="Location axonometry" data-alt="Location axonometry">
+                    <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Inspiration hotel">
+                </a>
+                <a href="img/inspiration_hotel_2.jpg" data-lightbox="inspiration-hotel" data-title="Module 1" data-alt="Module 1"></a>
+                <a href="img/inspiration_hotel_3.jpg" data-lightbox="inspiration-hotel" data-title="Module 2" data-alt="Module 2"></a>
+                <a href="img/inspiration_hotel_4.jpg" data-lightbox="inspiration-hotel" data-title="Module 3" data-alt="Module 3"></a>
+                <a href="img/inspiration_hotel_5.jpg" data-lightbox="inspiration-hotel" data-title="Module 4" data-alt="Module 4"></a>
+                <a href="img/inspiration_hotel_6.jpg" data-lightbox="inspiration-hotel" data-title="Module 5" data-alt="Module 5"></a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
