Add art gallery images

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <a href="img/inspiration_hotel_6.jpg" data-lightbox="inspiration-hotel" data-title="Module 5" data-alt="Module 5"></a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Final degree project logo">
-                    </a>
+                <a href="img/inspiration_hotel_1.jpg" data-lightbox="inspiration-hotel" data-title="Location axonometry" data-alt="Location axonometry">
+                    <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Final degree project logo">
+                </a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
@@ -92,9 +92,11 @@
                     </a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/art_gallery_0.svg" alt="Dynamo Scripts">
-                    </a>
+                <a href="img/art_gallery_1.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view">
+                    <img class="thumbnail-image" src="img/art_gallery_0.svg" alt="Dynamo Scripts">
+                </a>
+                <a href="img/art_gallery_2.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view"></a>
+                <a href="img/art_gallery_3.jpg" data-lightbox="art-gallery" data-title="Axonometry" data-alt="Axonometry"></a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
