Add more lightbox images

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </li>
             <li class="thumbnail-item">
                 <a href="img/inspiration_hotel_1.jpg" data-lightbox="inspiration-hotel" data-title="Location axonometry" data-alt="Location axonometry">
-                    <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Inspiration hotel">
+                    <img class="thumbnail-image" src="img/inspiration_hotel_0.svg" alt="Inspiration hotel logo">
                 </a>
                 <a href="img/inspiration_hotel_2.jpg" data-lightbox="inspiration-hotel" data-title="Module 1" data-alt="Module 1"></a>
                 <a href="img/inspiration_hotel_3.jpg" data-lightbox="inspiration-hotel" data-title="Module 2" data-alt="Module 2"></a>
@@ -67,24 +67,30 @@
                 <a href="img/inspiration_hotel_6.jpg" data-lightbox="inspiration-hotel" data-title="Module 5" data-alt="Module 5"></a>
             </li>
             <li class="thumbnail-item">
-                <a href="img/inspiration_hotel_1.jpg" data-lightbox="inspiration-hotel" data-title="Location axonometry" data-alt="Location axonometry">
+                <a href="img/degree_project_1.jpg" data-lightbox="degree-project" data-title="Location axonometry" data-alt="Location axonometry">
                     <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Final degree project logo">
                 </a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/hospital_0.svg" alt="Zhengzhou hospital logo">
-                    </a>
+                <a href="img/hospital_1.png" data-lightbox="hospital" data-title="Location, image courtesy of beades arquitectos sap" data-alt="Location">
+                    <img class="thumbnail-image" src="img/hospital_0.svg" alt="Zhengzhou hospital logo">
+                </a>
+                <a href="img/hospital_2.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap" data-alt="Exterior view">
+                <a href="img/hospital_3.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap" data-alt="Exterior view"></a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/church_0.svg" alt="Dynamo Scripts">
-                    </a>
+                <a href="img/church_1.jpg" data-lightbox="church" data-title="Scketchs" data-alt="Scketchs">
+                    <img class="thumbnail-image" src="img/church_0.svg" alt="Church">
+                </a>
+                <a href="img/church_2.jpg" data-lightbox="church" data-title="Interior view" data-alt="Interior view">
+                <a href="img/church_3.jpg" data-lightbox="church" data-title="Axonometries and plan" data-alt="Axonometries and plan"></a>
+                <a href="img/church_4.jpg" data-lightbox="church" data-title="Elevation and section" data-alt="Elevation and section"></a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/library_0.svg" alt="Dynamo Scripts">
-                    </a>
+                <a href="img/library_1.jpg" data-lightbox="library" data-title="Location" data-alt="Location">
+                    <img class="thumbnail-image" src="img/library_0.svg" alt="Helsinki library">
+                </a>
+                <a href="img/library_2.jpg" data-lightbox="library" data-title="Exterior view" data-alt="Exterior view"></a>
             </li>
             <li class="thumbnail-item">
                     <a href="#">
@@ -93,7 +99,7 @@
             </li>
             <li class="thumbnail-item">
                 <a href="img/art_gallery_1.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view">
-                    <img class="thumbnail-image" src="img/art_gallery_0.svg" alt="Dynamo Scripts">
+                    <img class="thumbnail-image" src="img/art_gallery_0.svg" alt="Art Gallery">
                 </a>
                 <a href="img/art_gallery_2.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view"></a>
                 <a href="img/art_gallery_3.jpg" data-lightbox="art-gallery" data-title="Axonometry" data-alt="Axonometry"></a>
