--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,18 +12,31 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
 </head>
+
 <body>
-    <header class="main-header"><img src="img/logo.svg">
+    <header class="main-header">
+        <img src="img/logo.svg">
         <nav class="navigation-bar">
             <ul class="navigation-list">
-                <li><a href="#">Arch Portfolio</a></li>
-                <li><a href="websites.html">Webs</a></li>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.hmtl">About me</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li>
+                    <a href="#">Arch Portfolio</a>
+                </li>
+                <li>
+                    <a href="websites.html">Webs</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="about.hmtl">About me</a>
+                </li>
+                <li>
+                    <a href="contact.html">Contact</a>
+                </li>
             </ul>
         </nav>
     </header>
+
     <main class="main-content">
         <ul class="thumbnail-list">
             <li class="thumbnail-item">
@@ -75,16 +89,18 @@
                 <a href="img/hospital_1.png" data-lightbox="hospital" data-title="Location, image courtesy of beades arquitectos sap" data-alt="Location">
                     <img class="thumbnail-image" src="img/hospital_0.svg" alt="Zhengzhou hospital logo">
                 </a>
-                <a href="img/hospital_2.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap" data-alt="Exterior view">
-                <a href="img/hospital_3.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap" data-alt="Exterior view"></a>
+                <a href="img/hospital_2.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap"
+                    data-alt="Exterior view">
+                    <a href="img/hospital_3.png" data-lightbox="hospital" data-title="Exterior view, image courtesy of beades arquitectos sap"
+                        data-alt="Exterior view"></a>
             </li>
             <li class="thumbnail-item">
                 <a href="img/church_1.jpg" data-lightbox="church" data-title="Scketchs" data-alt="Scketchs">
                     <img class="thumbnail-image" src="img/church_0.svg" alt="Church">
                 </a>
                 <a href="img/church_2.jpg" data-lightbox="church" data-title="Interior view" data-alt="Interior view">
-                <a href="img/church_3.jpg" data-lightbox="church" data-title="Axonometries and plan" data-alt="Axonometries and plan"></a>
-                <a href="img/church_4.jpg" data-lightbox="church" data-title="Elevation and section" data-alt="Elevation and section"></a>
+                    <a href="img/church_3.jpg" data-lightbox="church" data-title="Axonometries and plan" data-alt="Axonometries and plan"></a>
+                    <a href="img/church_4.jpg" data-lightbox="church" data-title="Elevation and section" data-alt="Elevation and section"></a>
             </li>
             <li class="thumbnail-item">
                 <a href="img/library_1.jpg" data-lightbox="library" data-title="Location" data-alt="Location">
@@ -93,9 +109,9 @@
                 <a href="img/library_2.jpg" data-lightbox="library" data-title="Exterior view" data-alt="Exterior view"></a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/youth_camp_0.svg" alt="Dynamo Scripts">
-                    </a>
+                <a href="#">
+                    <img class="thumbnail-image" src="img/youth_camp_0.svg" alt="Dynamo Scripts">
+                </a>
             </li>
             <li class="thumbnail-item">
                 <a href="img/art_gallery_1.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view">
@@ -105,13 +121,14 @@
                 <a href="img/art_gallery_3.jpg" data-lightbox="art-gallery" data-title="Axonometry" data-alt="Axonometry"></a>
             </li>
             <li class="thumbnail-item">
-                    <a href="#">
-                        <img class="thumbnail-image" src="img/music_school_0.svg" alt="Dynamo Scripts">
-                    </a>
+                <a href="#">
+                    <img class="thumbnail-image" src="img/music_school_0.svg" alt="Dynamo Scripts">
+                </a>
             </li>
 
         </ul>
     </main>
     <script src="js/lightbox.js"></script>
 </body>
+
 </html>
