Add degree project images

--- a/index.html
+++ b/index.html
@@ -84,6 +84,13 @@
                 <a href="img/degree_project_1.jpg" data-lightbox="degree-project" data-title="Location axonometry" data-alt="Location axonometry">
                     <img class="thumbnail-image" src="img/degree_project_0.svg" alt="Final degree project logo">
                 </a>
+                <a href="img/degree_project_2.jpg" data-lightbox="degree-project" data-title="Concept diagrams" data-alt="Concept diagrams"></a>
+                <a href="img/degree_project_3.jpg" data-lightbox="degree-project" data-title="Aerial view" data-alt="Aerial view"></a>
+                <a href="img/degree_project_4.jpg" data-lightbox="degree-project" data-title="South facade view and surroundings" data-alt="South facade view and surroundings"></a>
+                <a href="img/degree_project_5.jpg" data-lightbox="degree-project" data-title="Underground hall" data-alt="Underground hall"></a>
+                <a href="img/degree_project_6.jpg" data-lightbox="degree-project" data-title="Hotel hall" data-alt="Hotel hall"></a>
+                <a href="img/degree_project_7.jpg" data-lightbox="degree-project" data-title="Multiuse building entrance" data-alt="Multiuse building entrance"></a>
+                <a href="img/degree_project_8.jpg" data-lightbox="degree-project" data-title="Detail section" data-alt="Detail section"></a>
             </li>
             <li class="thumbnail-item">
                 <a href="img/hospital_1.png" data-lightbox="hospital" data-title="Location, image courtesy of beades arquitectos sap" data-alt="Location">
