Add youth-camp images

--- a/index.html
+++ b/index.html
@@ -116,9 +116,13 @@
                 <a href="img/library_2.jpg" data-lightbox="library" data-title="Exterior view" data-alt="Exterior view"></a>
             </li>
             <li class="thumbnail-item">
-                <a href="#">
+                <a href="img/youth_camp_1.jpg" data-lightbox="youth-camp" data-title="Location" data-alt="Location">
                     <img class="thumbnail-image" src="img/youth_camp_0.svg" alt="Dynamo Scripts">
                 </a>
+                <a href="img/youth_camp_2.jpg" data-lightbox="youth-camp" data-title="General view" data-alt="General view"></a>
+                <a href="img/youth_camp_3.jpg" data-lightbox="youth-camp" data-title="Multipurpose room" data-alt="Multipurpose room"></a>
+                <a href="img/youth_camp_4.jpg" data-lightbox="youth-camp" data-title="Classroom" data-alt="Classroom"></a>
+                <a href="img/youth_camp_5.jpg" data-lightbox="youth-camp" data-title="Activities room" data-alt="Activities room"></a>
             </li>
             <li class="thumbnail-item">
                 <a href="img/art_gallery_1.jpg" data-lightbox="art-gallery" data-title="Interior view" data-alt="Interior view">
