Add music-school images

--- a/index.html
+++ b/index.html
@@ -132,9 +132,13 @@
                 <a href="img/art_gallery_3.jpg" data-lightbox="art-gallery" data-title="Axonometry" data-alt="Axonometry"></a>
             </li>
             <li class="thumbnail-item">
-                <a href="#">
+                <a href="img/music_school_1.jpg" data-lightbox="music" data-title="Location" data-alt="Location">
                     <img class="thumbnail-image" src="img/music_school_0.svg" alt="Dynamo Scripts">
                 </a>
+                <a href="img/music_school_2.jpg" data-lightbox="music" data-title="Axonometry" data-alt="Axonometry"></a>
+                <a href="img/music_school_3.jpg" data-lightbox="music" data-title="Axonometry" data-alt="Axonometry"></a>
+                <a href="img/music_school_4.jpg" data-lightbox="music" data-title="Exterior view" data-alt="Exterior view"></a>
+                <a href="img/music_school_5.jpg" data-lightbox="music" data-title="Exterior view" data-alt="Exterior view"></a>
             </li>
 
         </ul>
