Add styles to a tags

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>nWn Arch Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>nWn Arch &amp; Design</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" media="screen" href="css/styles.css" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -40,12 +41,15 @@
     <main class="main-content">
         <ul class="thumbnail-list">
             <li class="thumbnail-item">
-                <a href="img/dynamo_1.png" data-lightbox="dynamo" data-title="Revision history sheet" data-alt="Revision history sheet script">
-                    <img class="thumbnail-image" src="img/dynamo_0.svg" alt="Dynamo Scripts">
-                </a>
-                <a href="img/dynamo_2.png" data-lightbox="dynamo" data-title="Matrix on curves" data-alt="Matrix on curves script"></a>
-                <a href="img/dynamo_3.png" data-lightbox="dynamo" data-title="Place views on sheets" data-alt="Place views on sheets script"></a>
-                <a href="img/dynamo_4.png" data-lightbox="dynamo" data-title="Rename grids" data-alt="rename grids script"></a>
+                <div class="front-side">
+                    <a href="img/dynamo_1.png" data-lightbox="dynamo" data-title="Revision history sheet" data-alt="Revision history sheet script">
+                        <img class="thumbnail-image" src="img/dynamo_0.svg" alt="Dynamo Scripts">
+                    </a>
+                    <a href="img/dynamo_2.png" data-lightbox="dynamo" data-title="Matrix on curves" data-alt="Matrix on curves script"></a>
+                    <a href="img/dynamo_3.png" data-lightbox="dynamo" data-title="Place views on sheets" data-alt="Place views on sheets script"></a>
+                    <a href="img/dynamo_4.png" data-lightbox="dynamo" data-title="Rename grids" data-alt="rename grids script"></a>
+                </div>
+                <div class="back-side">Dynamo Scripts</div>
             </li>
             <li class="thumbnail-item">
                 <a href="img/santa_1.jpg" data-lightbox="santa" data-title="Location" data-alt="Location">
